1. import code in http://stackoverflow.com/questions/18422223/bootstrap-3-modal-vertical-position-center 2. fix problem "明明資料已經更新過了，下次讀取時還在更新" 3. create a modal to inform that data is updating

--- a/css/main.css
+++ b/css/main.css
@@ -138,3 +138,14 @@
         background-image: url("../img/background.png");
         background-repeat: repeat;
       }
+	  .modal-dialog-center { /* Edited classname 10/03/2014 */
+		margin: 0;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+	  }
+	@media (max-width: 767px) {
+	  .modal-dialog-center { /* Edited classname 10/03/2014 */
+		width: 100%;
+	  }
+} 
